--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,33 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="15dp"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/postalCodeContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_postal_code">
+            <EditText
+                android:id="@+id/postalCode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_postal_code"
+                android:padding="10dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/postalCodeContainer"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_rounded_corner"
+            android:id="@+id/searchPostalCode"
+            android:visibility="gone"
+            android:textColor="#FFFFFF"
+            android:text="@string/search"/>
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
@@ -26,5 +52,8 @@
         app:headerLayout="@layout/navigation_header"
         app:menu="@menu/navigation_menu"
         />
+
+
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
