--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,12 +3,12 @@
 
     <item android:id="@+id/account"
         android:icon="@drawable/ic_baseline_person_24"
-        android:title="My Account"/>
+        android:title="Profile"/>
     <item android:id="@+id/settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings"/>
+        android:icon="@drawable/ic_baseline_payment_24"
+        android:title="Payment"/>
     <item android:id="@+id/editprofile"
-        android:icon="@drawable/ic_baseline_edit_24"
-        android:title="Edit Account"/>
+        android:icon="@drawable/ic_baseline_lock_open_24"
+        android:title="Logout"/>
 
 </menu>
