--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -12,17 +12,16 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/toolbar_bg"
+        android:background="#342345"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
     </androidx.appcompat.widget.Toolbar>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         android:background="#1ebed4"
-        android:id="@+id/paymentContainer"
-        >
+        android:id="@+id/paymentContainer">
     </RelativeLayout>
 
     <com.google.android.material.textview.MaterialTextView
@@ -31,7 +30,7 @@
         android:text="Credit Card Number"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
-        android:layout_below="@id/paymentContainer"
+        android:layout_below="@id/toolbarPayment"
         android:textColor="#1ebed4"
         android:textStyle="bold"
         android:id="@+id/creditTitle"/>
