--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3592DC</color>
-    <color name="colorPrimaryDark">#0460A8</color>
-    <color name="colorAccent">#729FC3</color>
+    <color name="colorPrimary">#1ebed4</color>
+    <color name="colorPrimaryDark">#04899C</color>
+    <color name="colorAccent">#42BBCC</color>
 </resources>
