--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -12,17 +12,18 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#342345"
+        android:background="@drawable/toolbar_bg"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
     </androidx.appcompat.widget.Toolbar>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#1ebed4"
+        android:layout_alignParentStart="true"
         android:id="@+id/paymentContainer">
     </RelativeLayout>
+
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
@@ -125,4 +126,5 @@
         android:layout_above="@id/savepaymentDetails"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
+
 </RelativeLayout>
