--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/button_rounded_corner"
-        android:id="@+id/savepaymentDetails"
+        android:id="@+id/savePaymentDetails"
         android:textColor="#FFFFFF"
         android:layout_margin="15dp"
         android:layout_alignParentBottom="true"
@@ -123,7 +123,7 @@
         layout="@layout/buy_with_googlepay_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/buy_button_height"
-        android:layout_above="@id/savepaymentDetails"
+        android:layout_above="@id/savePaymentDetails"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
 
