--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,14 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@android:color/white</item>
     </style>
+    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/colorWhite</item>
 
+        <item name="dialogCornerRadius">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colortoolbar</item>
+
+    </style>
 
 
 </resources>
