Getting current location and storing it in Realm database once the user click update button in ProfileActivity.

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -75,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/contactTitle"
         android:text="+14371231231"
+        android:inputType="number"
         android:hint="Enter your contact number"
         android:id="@+id/contact"
         android:gravity="center"/>
