--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -114,6 +114,17 @@
         android:background="@drawable/button_rounded_corner"
         android:id="@+id/savePaymentDetails"
         android:textColor="#FFFFFF"
+        android:layout_above="@id/googlePayButton"
+        android:layout_margin="15dp"
+        android:text="Save Credit Card"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_rounded_corner"
+        android:id="@+id/payWithCreditCard"
+        android:textColor="#FFFFFF"
         android:layout_margin="15dp"
         android:layout_alignParentBottom="true"
         android:text="Pay With Credit Card"/>
@@ -123,7 +134,7 @@
         layout="@layout/buy_with_googlepay_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/buy_button_height"
-        android:layout_above="@id/savePaymentDetails"
+        android:layout_above="@id/payWithCreditCard"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
 
