--- a/app/src/main/res/layout/activity_restaurants_near_me.xml
+++ b/app/src/main/res/layout/activity_restaurants_near_me.xml
@@ -16,14 +16,8 @@
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
     </androidx.appcompat.widget.Toolbar>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#1ebed4"
-        android:layout_alignParentStart="true"
-        android:id="@+id/paymentContainer">
-    </RelativeLayout>
-    <ImageView
+
+  <!--  <ImageView
         android:id="@+id/foodImage2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,12 +25,13 @@
         android:layout_marginStart="10dp"
         android:adjustViewBounds="true"
         android:layout_below="@id/toolbarPayment"
-        app:srcCompat="@drawable/popular1" />
+        app:srcCompat="@drawable/popular1" />  -->
+
 
         <ViewFlipper
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerInParent="true"
             android:id="@+id/vFlipper"/>
     <Button
         android:layout_width="match_parent"
@@ -46,7 +41,7 @@
         android:id="@+id/button"
         android:textColor="#FFFFFF"
         android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/foodImage2"
+        app:layout_constraintTop_toBottomOf="@+id/vFlipper"
         android:text="Show nearby restaurants"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
