Food listing implemented successfully. Working on AddToCart.

--- a/app/src/main/res/layout/activity_restaurant_menu_list.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu_list.xml
@@ -3,7 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".RestaurantMenuListActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"
+        android:layout_margin="5dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
