--- a/app/src/main/res/layout/cart_menu_item_list.xml
+++ b/app/src/main/res/layout/cart_menu_item_list.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/itemImage"
+                android:id="@+id/itemImageForCart"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"/>
@@ -29,7 +29,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/itemName"
+                    android:id="@+id/itemNameForCart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Item Name"
@@ -46,7 +46,7 @@
                         android:layout_margin="10dp"/>
 
                     <TextView
-                        android:id="@+id/itemPrice"
+                        android:id="@+id/itemPriceForCart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="$"
@@ -65,7 +65,7 @@
                         android:layout_margin="10dp"/>
 
                     <TextView
-                        android:id="@+id/itemQuantity"
+                        android:id="@+id/itemQuantityForCart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="1"
