--- a/app/src/main/res/layout/activity_restaurants_near_me.xml
+++ b/app/src/main/res/layout/activity_restaurants_near_me.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/drawerLayout"
     tools:context=".RestaurantsNearMe">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarPayment"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/toolbar_bg"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-    </androidx.appcompat.widget.Toolbar>
 
-  <!--  <ImageView
+    <RelativeLayout
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+    <!--  <ImageView
         android:id="@+id/foodImage2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,4 +47,16 @@
         app:layout_constraintTop_toBottomOf="@+id/vFlipper"
         android:text="Show nearby restaurants"
         android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/navigation_menu"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
