--- a/app/src/main/res/layout/restaurants_listview_layout.xml
+++ b/app/src/main/res/layout/restaurants_listview_layout.xml
@@ -1,48 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:scrollbars="none"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginTop="4dp"
+    android:layout_height="270dp"
+    android:layout_marginStart="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginTop="30dp"
+    android:background="@color/colorWhite"
     android:layout_marginBottom="4dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/icon"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:padding="5dp" />
 
-    <RelativeLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+
+
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:elevation="4dp"
+    app:cardCornerRadius="4dp">
+
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/coverPhoto"
+            android:scaleType="fitXY"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/icon"
+
+            android:layout_width="59dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="135dp" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medium Text"
-            android:textStyle="bold"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_below="@id/icon"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:padding="2dp"
-            android:textColor="#4d4d4d" />
+            android:gravity="center"
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#4d4d4d"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/rating_image"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_below="@+id/title"
-            android:src="@drawable/rating"
-            android:layout_marginLeft="10dp"/>
+            android:layout_width="21dp"
+            android:layout_height="15dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="97dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/rating" />
+
         <TextView
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:text="TextView"
-            android:layout_toRightOf="@+id/rating_image"
-            android:layout_marginLeft="10dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="-40dp"
+            android:layout_marginBottom="17dp"
+            android:layout_toStartOf="@+id/rating_image"
+            android:text="T"
+            android:textColor="@color/colorBlack" />
+
     </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
