Calculating and displaying total distance and total amount implemented successfully. Also rounded the amount to two decimal points and delivery charge to the greatest integer.

--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -64,7 +64,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/paymentOptions"
+        android:id="@+id/payAmount"
         android:text="Show Payment Options"
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
