--- a/app/src/main/res/layout/restaurants_listview_layout.xml
+++ b/app/src/main/res/layout/restaurants_listview_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:scrollbars="none"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
+    android:layout_height="350dp"
     android:layout_marginStart="2dp"
     android:layout_marginEnd="2dp"
     android:layout_marginTop="30dp"
@@ -15,73 +15,82 @@
 
 
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:elevation="4dp"
-    app:cardCornerRadius="4dp">
+    <androidx.cardview.widget.CardView
 
-
-
-
-    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:padding="20dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp">
 
-        <ImageView
-            android:id="@+id/coverPhoto"
-            android:scaleType="fitXY"
+
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp" />
+            android:layout_height="300dp"
+            android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/icon"
+            <ImageView
+                android:id="@+id/coverPhoto"
+                android:scaleType="fitXY"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
 
-            android:layout_width="59dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="135dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/icon"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_marginLeft="20dp"
+                app:civ_border_color="@color/colorWhite"
+                app:civ_border_width="2dp"
+                android:layout_marginTop="170dp"
+                />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/icon"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#4d4d4d"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/title"
+                android:elevation="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/icon"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="1dp"
+                android:gravity="center"
+                android:text="Medium Text"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#4d4d4d"
+                android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/rating_image"
-            android:layout_width="21dp"
-            android:layout_height="15dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="97dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/rating" />
+            <ImageView
+                android:id="@+id/rating_image"
+                android:layout_width="21dp"
+                android:layout_height="15dp"
+                android:elevation="5dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="64dp"
+                android:layout_marginBottom="65dp"
+                android:src="@drawable/rating" />
 
-        <TextView
-            android:id="@+id/subtitle"
-            android:layout_width="wrap_content"
-            android:gravity="left"
-            android:textStyle="bold"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="-40dp"
-            android:layout_marginBottom="17dp"
-            android:layout_toStartOf="@+id/rating_image"
-            android:text="T"
-            android:textColor="@color/colorBlack" />
+            <TextView
+                android:id="@+id/subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="23dp"
+                android:layout_marginEnd="-65dp"
+                android:layout_marginBottom="62dp"
+                android:layout_toStartOf="@+id/rating_image"
+                android:gravity="center"
+                android:text="Text"
+                android:textColor="@color/colorBlack"
+                android:textSize="8pt"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
