updated menu list

--- a/app/src/main/res/layout/menu_item_list.xml
+++ b/app/src/main/res/layout/menu_item_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,9 +8,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="#FFFFFF">
+        android:padding="5dp"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,6 +19,11 @@
             android:orientation="horizontal">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/itemImage"
+                android:shadowRadius="2"
+                app:civ_border_color="@color/colorWhite"
+                app:civ_border_width="2dp"
+                android:shadowColor="@color/colorBlack"
+                android:elevation="3dp"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"/>
@@ -32,25 +39,34 @@
                     android:id="@+id/itemName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:text="Item Name"
-                    android:layout_margin="10dp"/>
+                    android:textColor="@color/colorBlack"
+                    android:textSize="8pt" />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/itemPriceHeading"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Item Price"
-                        android:layout_margin="10dp"/>
+                        android:layout_margin="5dp"
+                        android:text="$"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="8pt"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/itemPrice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:text="Item Price : "
-                        android:layout_margin="10dp"/>
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="8pt" />
                 </LinearLayout>
 
 
