--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/belgrano</item>
         <item>@font/cherry_cream_soda</item>
         <item>@font/hammersmith_one</item>
         <item>@font/lemon</item>
