--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -12,13 +12,16 @@
         android:id="@+id/heading"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
         android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_alignParentTop="true"
         android:text="Billing Details"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_below="@+id/heading"
+
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         android:layout_centerInParent="true"
         android:layout_margin="15dp"
@@ -26,7 +29,8 @@
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grossAmountInDelivery"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -36,7 +40,8 @@
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalDistance"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -45,29 +50,28 @@
         android:id="@+id/deliveryCharge"
         />
 
+
     <TextView
+        android:id="@+id/amountToPay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/deliveryCharge"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-        android:layout_centerInParent="true"
-        android:layout_margin="15dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="242dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
-        android:id="@+id/amountToPay"
         android:text="Amount To Pay : $"
-        />
-
-
-
-
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+        android:textColor="@color/colorPrimaryDark" />
 
     <Button
+        android:id="@+id/payAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/payAmount"
-        android:text="Show Payment Options"
         android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"
-        android:background="@drawable/button_rounded_corner"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="140dp"
+        android:background="@drawable/button_rounded_corner"
+        android:text="Show Payment Options" />
 
 </RelativeLayout>
