--- a/app/src/main/res/layout/cart_menu_item_list.xml
+++ b/app/src/main/res/layout/cart_menu_item_list.xml
@@ -7,9 +7,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="#FFFFFF">
+        android:padding="5dp"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,23 +34,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Item Name"
+                    android:textSize="8pt"
+                    android:textColor="@color/colorPrimaryDark"
                     android:layout_margin="10dp"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/itemPriceHeading"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Item Price"
-                        android:layout_margin="10dp"/>
+                        android:layout_margin="10dp"
+                        android:text="$"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="8pt" />
 
                     <TextView
                         android:id="@+id/itemPriceForCart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="$"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="8pt"
                         android:layout_margin="10dp"/>
                 </LinearLayout>
 
@@ -61,7 +69,9 @@
                         android:id="@+id/itemQuantityHeading"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Item Quantity"
+                        android:text="Quantity"
+                        android:textSize="8pt"
+                        android:textColor="@color/colorPrimaryDark"
                         android:layout_margin="10dp"/>
 
                     <TextView
@@ -69,6 +79,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="1"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="8pt"
                         android:layout_margin="10dp"/>
                 </LinearLayout>
 
