Clearing Cart after Google Pay Transaction implemented successfully.

--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -76,8 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="140dp"
+        android:layout_margin="10dp"
         android:background="@drawable/button_rounded_corner"
         android:text="Pay" />
 
