--- a/app/src/main/res/layout/activity_restaurant_menu_list.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu_list.xml
@@ -14,6 +14,7 @@
         android:id="@+id/recyclerView"
         android:layout_above="@+id/viewCart"
         android:layout_marginBottom="35dp"
+        android:layout_alignParentTop="true"
         android:layout_margin="5dp"/>
 
     <Button
