--- a/app/src/main/res/drawable/time_bg.xml
+++ b/app/src/main/res/drawable/time_bg.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:topLeftRadius="25dp"
-        android:topRightRadius="25dp"
-        android:bottomLeftRadius="25dp"
-        android:bottomRightRadius="25dp"/>
+    <corners android:topLeftRadius="70dp"/>
 
-    <gradient android:startColor="#FB4E4E"
-        android:endColor="#FB4E4E"/>
+    <gradient android:startColor="#1ebed4"
+        android:endColor="#1ebed4"/>
 
 
 </shape>
