--- a/app/src/main/res/layout/activity_restaurants_near_me.xml
+++ b/app/src/main/res/layout/activity_restaurants_near_me.xml
@@ -34,6 +34,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/logo_background"
+            android:layout_alignParentTop="true">
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/logo"/>
+        </RelativeLayout>
 
        <!-- <ViewFlipper
             android:layout_width="700dp"
